<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/tv_label_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:gravity="right|center_vertical"
                    android:padding="8dp"
                    android:textSize="12sp"
                    tools:text="@string/trade_label_price_bid" />

                <EditText
                    android:id="@+id/et_price"
                    style="@style/AppEditText.Border"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="numberDecimal"
                    tools:hint="@string/price_bid" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/tv_label_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:gravity="right|center_vertical"
                    android:padding="8dp"
                    tools:text="@string/trade_label_commission_quantity"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_quantity"
                    style="@style/AppEditText.Border"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="numberDecimal"
                    tools:hint="@string/quantity" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/tv_label_commission_volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:gravity="right|center_vertical"
                    android:padding="8dp"
                    tools:text="@string/trade_label_commission_volume"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_volume"
                    style="@style/AppEditText.Border"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="numberDecimal"
                    tools:hint="@string/volume" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_commission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/commission" />

            <TextView
                android:id="@+id/tv_commission_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/commission_rate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:background="@android:color/white"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/tv_label_balance_available"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:gravity="right|center_vertical"
                android:padding="8dp"
                android:textSize="16sp"
                tools:text="可用BTC" />

            <TextView
                android:id="@+id/tv_balance_available"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="3"
                android:lines="1"
                android:ellipsize="end"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:padding="@dimen/tv_padding"
                android:fontFamily="monospace"
                android:textSize="16sp"
                android:text="\?"
                tools:text="100000000" />

        </LinearLayout>

        <include layout="@layout/divider_dark" />

        <Button
            android:id="@+id/btn_commit"
            style="@style/AppButton.Colored"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_colored_height"
            android:layout_marginTop="8dp"
            android:text="@string/confirm"
            tools:text="@string/confirm" />

    </LinearLayout>
</layout>
