<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fafabtc.app.ui.activity.AboutActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_padding"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingStart="4dp"
            tools:text="1.0"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/about_detail"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <include
        layout="@layout/divider_dark" />


    <TextView
        android:id="@+id/btn_check_upgrade"
        style="@style/AppButton.Setting"
        android:background="?attr/selectableItemBackground"
        android:text="@string/check_grade" />

    <include
        layout="@layout/divider_dark"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_gravity="bottom"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_user_feed_back"
            style="@style/AppButton.Setting"
            android:background="?attr/selectableItemBackground"
            android:text="@string/user_feedback" />

        <include
            layout="@layout/divider_dark"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"/>

    </FrameLayout>

</LinearLayout>
