<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.fafabtc.app.ui.fragment.AccountFragment.AccountFragmentHandler" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <TextView
                    style="@style/TextDivider"
                    android:text="@string/assets_manage" />

                <include layout="@layout/divider_dark"/>

                <TextView
                    android:id="@+id/btn_assets_group"
                    style="@style/AppButton.Setting"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/assets_group"
                    android:onClick="@{handler::onClickAssetsGroup}"/>

                <include layout="@layout/divider_dark" />

                <FrameLayout
                    android:id="@+id/account_assets_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">
                    <fragment
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:name="com.fafabtc.app.ui.fragment.AccountAssetsListFragment" />
                </FrameLayout>

                <TextView
                    android:id="@+id/btn_create_assets"
                    style="@style/AppButton.Setting"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{handler::onClickCreateAssets}"
                    android:text="@string/create_assets" />

                <include layout="@layout/divider_dark" />

                <TextView
                    style="@style/TextDivider"
                    android:text="@string/settings" />

                <include layout="@layout/divider_dark"/>

                <TextView
                    android:id="@+id/btn_about"
                    style="@style/AppButton.Setting"
                    android:background="?attr/selectableItemBackground"
                    android:onClick="@{handler::onClickAbout}"
                    android:text="@string/about_and_feedback" />

                <include layout="@layout/divider_dark" />

                <TextView
                    android:id="@+id/btn_settings"
                    style="@style/AppButton.Setting"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/settings"
                    android:onClick="@{handler::onClickSettings}" />

                <include layout="@layout/divider_dark" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:gravity="center"
                        android:lines="1"
                        android:text="@string/mine"
                        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                        android:textColor="@android:color/primary_text_dark" />
                </LinearLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>

</layout>